add sender properties

--- a/is-gateway/config/sender.properties
+++ b/is-gateway/config/sender.properties
@@ -3,11 +3,11 @@ spring.application.name=s4s-gateway
 
 kafkaDomainLocal=xxxxx
 kafkaPortLocal=xxxx
-gatewayDomainRC=gateway-receiver
+gatewayDomainRC=http://141.95.158.49/api_is-gw
 gatewayPortRC=10081
-gatewayDomainSD=gateway-sender
-gatewayPortSD=10080
-server.port=10080
+gatewayDomainSD=gw-sd1
+gatewayPortSD=10081
+server.port=10081
 
 gatewayRole=SENDER
 
@@ -34,6 +34,7 @@ isaConfig=\
   "authentication_requirements": [],\
   "connection_requirements": [],\
   "filterConfig": {\
+    "OrganizationName": "SOC3",\
     "CreateTime": "",\
     "StartTime": "",\
     "Cause": ""\
@@ -43,6 +44,7 @@ isaConfig=\
     "StartTime": ""\
   }\
 }
+
 
 ### Logging Configuration
 # Set logging level for the root logger
