--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
     
   is-gateway-rc:
-    image: s4s/is-gateway
+    image: s4s/is-gateway:v2
     container_name: s4s.is-gateway-rc
     build: 
       context: ./is-gateway/docker
@@ -85,15 +85,15 @@ services:
     depends_on:
       - rest-proxy
 
-  # is-gateway-sd:
-  #   image: s4s/is-gateway
-  #   container_name: s4s.is-gateway-sd
-  #   build: 
-  #     context: ./docker
-  #     dockerfile: Dockerfile
-  #   restart: "on-failure"
-  #   ports:
-  #      - 10080:10080
-  #   volumes:
-  #     - ./is-gateway/config/sender.properties:/application.properties
+  is-gateway-sd:
+    image: s4s/is-gateway:v2
+    container_name: s4s.is-gateway-sd
+    build: 
+      context: ./docker
+      dockerfile: Dockerfile
+    restart: "on-failure"
+    ports:
+       - 10082:10081
+    volumes:
+      - ./is-gateway/config/sender.properties:/application.properties
     
