upd: add docker compose receiver

--- a/is-gateway/config/sender.properties
+++ b/is-gateway/config/sender.properties
@@ -34,7 +34,7 @@ isaConfig=\
   "authentication_requirements": [],\
   "connection_requirements": [],\
   "filterConfig": {\
-    "OrganizationName": "SOC3",\
+    "OrganisationName": "SOC3",\
     "CreateTime": "",\
     "StartTime": "",\
     "Cause": ""\
