update receiver-gw to central

--- a/is-gateway/config/sender.properties
+++ b/is-gateway/config/sender.properties
@@ -3,7 +3,7 @@ spring.application.name=s4s-gateway
 
 kafkaDomainLocal=xxxxx
 kafkaPortLocal=xxxx
-gatewayDomainRC=http://141.95.158.49/api_is-gw
+gatewayDomainRC=https://is-gw-rc.central.safe4soc.cosypoc.fr
 gatewayPortRC=10081
 gatewayDomainSD=gw-sd1
 gatewayPortSD=10081
